# QtPS

./: CMakeLists.txt  README.md
include/: canvas.h  canvas.ui  gammadialog.h  gammadialog.ui  mainwindow.h  mainwindow.ui  my_dialog.h  numinputdialog.h  numinputdialog.ui  thicknessdialog.h  thicknessdialog.ui  thresdialog.h  thresdialog.ui  utils.h
src/: canvas.cpp  gammadialog.cpp  mainwindow.cpp  numinputdialog.cpp  thicknessdialog.cpp  thresdialog.cpp  utils.cpp
